[package]
name = "arith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csc411_image = "0.3.1"
csc411_rpegio
Array2 = { path = "../array2" }
bitpack = { path = "../bitpack" }
clap = {version = "4.1.10", features = ["derive"]}